--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   youtube_explode_dart: ^2.3.9
   flutter_riverpod: ^2.4.9
   country_picker: ^2.0.16
+  firebase_app_check: ^0.3.2+3
 
 dev_dependencies:
   flutter_test:
