--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.14+19
+version: 1.0.15+23
 
 environment:
   sdk: ">=2.19.0 < 4.0.0"
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.2
+  firebase_app_check: ^0.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,6 +62,7 @@ dependencies:
   youtube_explode_dart: ^2.3.9
   flutter_riverpod: ^2.4.9
   country_picker: ^2.0.16
+
 
 dev_dependencies:
   flutter_test:
