--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
 
         <meta-data
            android:name="com.onesignal.messaging.default_notification_icon"
-           android:resource="@drawable/ic_stat_onesignal_default" />
+           android:resource="@drawable/ic_launcher" />
 
        <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
-           android:resource="@drawable/ic_stat_onesignal_default" />
+           android:resource="@drawable/ic_launcher" />
 
 
        <meta-data android:name="com.google.android.geo.API_KEY"
@@ -49,10 +49,10 @@
                  screen fades out. A splash screen is useful to avoid any visual
                  gap between the end of Android's launch screen and the painting of
                  Flutter's first frame. -->
-            <meta-data
+            <!-- <meta-data
               android:name="io.flutter.embedding.android.SplashScreenDrawable"
               android:resource="@drawable/launch_background"
-              />
+              /> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
