--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,9 +109,9 @@ flutter:
 
     - family: GE_SS_Two
       fonts:
-        - asset: assets/fonts/GE_SS_Two_Medium.otf
+        - asset: assets/fonts/Almarai-Regular.ttf
         - weight: 400
-        - asset: assets/fonts/GE-SS-Two-Bold.otf
+        - asset: assets/fonts/Almarai-Bold.ttf
         - weight: 700
     - family: AppIcons
       fonts:
