--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,11 @@ dependencies:
   flutter_riverpod: ^2.4.9
   country_picker: ^2.0.16
   share_plus: ^10.1.4
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
 #  expandable: ^5.0.1
