--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ dependencies:
   share_plus: ^10.1.4
   hive_flutter: ^1.1.0
   hive: ^2.2.3
+  google_sign_in: ^6.3.0
+  flutter_facebook_auth: ^7.1.1
+  sign_in_with_apple: ^6.1.4
+
 dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.15
